--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 '27759': { password: '27759', empname: 'شمسة راشد' },
                 '27852': { password: '2682012', empname: 'أحمد حمدان الأشقر' },
                 '28331': { password: '28331', empname: 'محمد يحيي عطية' },
+              '32934': { password: '32934', empname: 'سيف عبدالله الحمادي ' },
                 '29937': { password: '29937', empname: 'مازن محمد' },
                 '11812': { password: '11812', empname: 'عامر محمد سعدي طه' },
                 '16726': { password: '16726', empname: 'احمد علي حافظ' },
