--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 '28332': { password: '28332', empname: 'محمود زيدان' },
                 '22186': { password: '22186', empname: 'وليد عبدالعاطي' },
                 '13740': { password: '1973', empname: 'محمد رضوان' },
-                '11349': { password: '11349', empname: 'محمد سليم' },
+                '1': { password: '1', empname: 'عادل عمر' },
                 '13171': { password: '9353', empname: 'محمد سلامة' },
                 '9098': { password: '9098', empname: 'يوسف الغول' },
                 '22116': { password: '22116', empname: 'هاشم علي' },
